fixes alignment on phone number

--- a/app/styles/ContentTypes/_footer.scss
+++ b/app/styles/ContentTypes/_footer.scss
@@ -42,7 +42,7 @@
         margin-right: 9px;
     }
 
-    p>a>span.fa.fa-phone.fa-lg {
+    span.fa.fa-phone.fa-lg {
         margin-right: 5px;
     }
 }
@@ -55,9 +55,6 @@
 .footer .fa {
     padding: 0px 5px;
 }
-
-
-
 
 // Code to remove spacing on LiveChat
 div#lhnContainerDone {display: none;}
